5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1573_1332.log
== SUBMITION (2019-03-11 15:34:15) 
-- CODE:
aresta =5
area = A=3/2*(3**1/2)*a**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.171636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = A=3/2*(3**1/2)*a**2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:35:58) 
-- CODE:
aresta =5
area = A=3/2*(3)**0.5*a**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.133525
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = A=3/2*(3)**0.5*a**2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:24) 
-- CODE:
aresta =5
area = A=3/2*(3)**0.5*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.140413
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:11:50) 
-- CODE:
aresta =5
area = A=3/2*(3)**0.5*a**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.159164
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = A=3/2*(3)**0.5*a**2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:12:17) 
-- CODE:
aresta =5
area = A=3/2*(3)**0.5*(a)**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.181358
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = A=3/2*(3)**0.5*(a)**2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:12:24) 
-- CODE:
aresta =5
area = A=3/2*(3)**0.5*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.134666
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
